--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^9.1.0
-  device_preview: ^0.7.4
   image_picker: ^0.8.0+3
+  flutter_bloc: ^7.2.0
+  bloc: ^7.1.0
+  hexcolor: ^2.0.5
+
 
 dev_dependencies:
   flutter_test:
