--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^9.1.0
-  image_picker: ^0.8.0+3
+  image_picker: ^0.8.4
   flutter_bloc: ^7.2.0
   bloc: ^7.1.0
   hexcolor: ^2.0.5
