--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   cloud_firestore: ^2.5.1
   firebase_auth: ^3.1.0
   firebase_core: ^1.6.0
-  conditional_builder: ^1.0.2
+  conditional_builder_null_safety: ^0.0.4
+  fluttertoast: ^8.0.8
   
 
 
