--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   intl: ^0.17.0
   firebase_storage: ^10.0.3
   like_button: ^2.0.3
+  animated_text_kit: ^4.2.1
+  photo_view: ^0.12.0
   
 
 
